# statbot-neue

./: .gitignore  .pylintrc  default.nix  pinned-nixpkgs.nix  pyproject.toml  settings.json.example
db-migrations/: 001.sql
statbot/: __main__.py  customizations.py
