[build-system]
requires = ["setuptools>=61.0", "discordpy~=2.0", "matplotlib~=3.5"]
build-backend = "setuptools.build_meta"

[project]
name = "statbot"
version = "0.0.0"
authors = [
  { name="Cass Dingenskirchen", email="admin@dingenskirchen.org" },
]
description = "*amogus voice* census"
requires-python = ">=3.10"

[project.scripts]
statbot = "statbot:__main__.main"
